# semaphore_cpp11

./: CMakeLists.txt  Makefile  README.md  semaphore.hpp
include/: semaphore.hpp
include/MA/: semaphore.hpp
tests/: CMakeLists.txt  tests.cpp
